(fix): Tablet-UI. Making Tablet Service-queues metrics header responsive on tablet mode

--- a/packages/esm-service-queues-app/src/patient-queue-metrics/metrics-header.scss
+++ b/packages/esm-service-queues-app/src/patient-queue-metrics/metrics-header.scss
@@ -20,3 +20,6 @@
   display: flex;
   column-gap: 0.5rem;
 }
+.comboBtn{
+  cursor: default;
+}
